# rag_oc

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  scores.json
.github/workflows/: unit-tests.yml
data/openagenda/: full.jsonl.manifest.json
docs/: MISTRAL.md  PRESENTATION.md  RAG_OpenAgenda_presentation.pptx  TECHNICAL_REPORT.md  project_presentation.html
scripts/: api_smoke_test.py  build_faiss_index.py  chat_openagenda.py  evaluate_rag.py  fetch_openagenda_events.py
src/rag_oc/: __init__.py  api.py  build_faiss_index.py  rag_service.py
tests/: rag_eval_sample.jsonl  test_api.py  test_build_faiss_index.py  test_evaluate_rag.py  test_openagenda.py  test_rag_service.py
