[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-oc"
version = "0.1.0"
description = "Pipeline RAG local autour d'OpenAgenda, FAISS, Mistral et FastAPI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "langchain-core>=0.3.68",
    "mistralai>=1.9.11",
    "numpy>=2.5.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
eval = [
    "datasets>=5.0.0",
    "langchain-community>=0.3,<0.4",
    "langchain-mistralai>=1.1.6",
    "ragas>=0.2,<0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=rag_oc --cov-report=term-missing --cov-report=html:htmlcov"

[tool.coverage.run]
source = ["src/rag_oc"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]
